--- a/index.html
+++ b/index.html
@@ -1,68 +1,49 @@
 <!DOCTYPE html>
 
-<html lang="EN">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Project Landing Page</title>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
+
     <body>
-        <div class="top-portion">
-
-            <div class="header">
-                <div class="header-logo">Header Logo</div>
-                <div class="links">
-                    <a href="#">header link one</a>
-                    <a href="#">header link two</a>
-                    <a href="#">header link three</a>
-                </div>
-            </div>
-
-            <div class="hero-section">
-                <div class="hero-text-portion">
-                    <div class="hero-text">This website is awesome</div>
-                    <p class="hero-paragraph">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button class="hero-button">Sign up</button>
-                </div>
-                <div class="hero-image-portion"> 
-                    <div class="image">this is a placeholder for an image</div>
-                </div>    
-            </div>
-
-        
-
-            <div class="subtext-section">
-                <div class="subtext-title">Some random information.</div>
-
-                <div class="square square-one"></div>
-                <p class="square-one-text">this is some subtext under an illustration of image</p>
-
-                <div class="square square-two"></div>
-                <p class="square-two-text">this is some subtext under an illustration of image</p>
-
-                <div class="square square-three"></div>
-                <p class="square-three-text">this is some subtext under an illustration of image</p>
-
-                <div class="square square-four"></div>
-                <p class="square-four-text">this is some subtext under an illustration of image</p
-            
-            </div>
-
-            <div class="grey-section">
-                <p class="grey-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will read it. Who knows? All I know is that it looks nice.</p>
-                <div class="grey-thor">-Thor, God of Thunder</div>
-            </div>
-
-
-            <div class="blue-section">
-                <div class="call-to-action">Call to action! It's time!</div>
-                <div class="call-action-subtext">Sign up for our product by clicking that button right over there!</div>
-                <button class="action-sign-up">Sign up</button>
-            </div>
-
+        <div class="header-section">
+            <div class="header-logo">Header Logo</div>
+            <div class="link">header link one</div>
+            <div class="link">header link two</div>
+            <div class="link">header link three</div>
         </div>
-
+        <div class="hero-section">
+            <div class="hero-container">
+                <div class="hero-title"><strong>This website is awesome</strong></div>
+                <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="hero-image">this is a placeholder for an image</div>
+        </div>
+        <div class="random-section">
+            <div class="random-square">this is some subtext under an illustration or image</div>
+            <div class="random-square">this is some subtext under an illustration or image</div>
+            <div class="random-square">this is some subtext under an illustration or image</div>
+            <div class="random-square">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="grey-section">
+            <div class="grey-quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
+            <div class="grey-thor"><strong>-Thor, God of Thunder</strong></div>
+        </div>
+        <div class="footer">
+            <div class="footer-title"><strong>Call to action! It's time!</strong></div>
+            <div class="footer-subtext">Sign up for our product by clicking that button right over there!</div>
+            <button class="footer-button">Sign up</button>
+        </div>
     </body>
+
+
+
+
+
+
 
 </html>
