Add header and proper spacing along with padding

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <body>
         <div class="header-section">
             <div class="header-logo">Header Logo</div>
-            <div class="link">header link one</div>
+        <div class="header-link-section">
+            <link class="link">header link one</link>
             <div class="link">header link two</div>
             <div class="link">header link three</div>
+        </div>
         </div>
         <div class="hero-section">
             <div class="hero-container">
