--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="header-section">
             <div class="header-logo">Header Logo</div>
         <div class="header-link-section">
-            <link class="link">header link one</link>
-            <div class="link">header link two</div>
-            <div class="link">header link three</div>
+            <a href="#" class="link">header link one</a>
+            <a href="#" class="link">header link two</a>
+            <a href="#" class="link">header link three</a>
         </div>
         </div>
         <div class="hero-section">
