Add bg color to header and hero section

--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 
 
     <body>
-        <div class="header-section">
-            <div class="header-logo">Header Logo</div>
-        <div class="header-link-section">
-            <a href="#" class="link">header link one</a>
-            <a href="#" class="link">header link two</a>
-            <a href="#" class="link">header link three</a>
-        </div>
-        </div>
-        <div class="hero-section">
-            <div class="hero-container">
-                <div class="hero-title"><strong>This website is awesome</strong></div>
-                <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button class="hero-button">Sign up</button>
+
+        <div class="header-hero-total">
+            <div class="header-section">
+                <div class="header-logo">Header Logo</div>
+            <div class="header-link-section">
+                <a href="#" class="link">header link one</a>
+                <a href="#" class="link">header link two</a>
+                <a href="#" class="link">header link three</a>
             </div>
-            <div class="hero-image">this is a placeholder for an image</div>
+            </div>
+            <div class="hero-section">
+                <div class="hero-container">
+                    <div class="hero-title"><strong>This website is awesome</strong></div>
+                    <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button class="hero-button">Sign up</button>
+                </div>
+                <div class="hero-image">this is a placeholder for an image</div>
+            </div>
         </div>
+
         <div class="random-section">
+            <div class="random-header">Some random information.</div>
             <div class="random-square">this is some subtext under an illustration or image</div>
             <div class="random-square">this is some subtext under an illustration or image</div>
             <div class="random-square">this is some subtext under an illustration or image</div>
