--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 
         <div class="random-section">
             <div class="random-header">Some random information.</div>
-            <div class="random-square">this is some subtext under an illustration or image</div>
-            <div class="random-square">this is some subtext under an illustration or image</div>
-            <div class="random-square">this is some subtext under an illustration or image</div>
-            <div class="random-square">this is some subtext under an illustration or image</div>
+                <div class="random-square-section">
+                    <div class="random-square"></div>
+                        <div class="random-square-info">this is some subtext under an illustration or image</div>
+                </div>        
         </div>
+
         <div class="grey-section">
             <div class="grey-quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
             <div class="grey-thor"><strong>-Thor, God of Thunder</strong></div>
