--- a/index.html
+++ b/index.html
@@ -1,55 +1,48 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Project Landing Page</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Project Landing Page</title>
+</head>
 
 
-    <body>
-
-        <div class="header-hero-total">
-            <div class="header-section">
-                <div class="header-logo">Header Logo</div>
-            <div class="header-link-section">
-                <a href="#" class="link">header link one</a>
-                <a href="#" class="link">header link two</a>
-                <a href="#" class="link">header link three</a>
+<body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Header Logo</div>
+            <ul class="nav">
+                <li>
+                    <a href="#">header link one</a>
+                </li>
+                <li>
+                    <a href="#">header link two</a>
+                </li>
+                <li>
+                    <a href="#">header link three</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
+    <header class="header">
+        <div class="container">
+            <div class="header-text">
+                <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title.
+                    It's a smaller font and the folor is lower contrast</p>
+                <button class="sign-up">Sign up</button>
             </div>
-            </div>
-            <div class="hero-section">
-                <div class="hero-container">
-                    <div class="hero-title"><strong>This website is awesome</strong></div>
-                    <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button class="hero-button">Sign up</button>
-                </div>
-                <div class="hero-image">this is a placeholder for an image</div>
-            </div>
         </div>
-
-        <div class="random-section">
-            <div class="random-header">Some random information.</div>
-                <div class="random-square-section">
-                    <div class="random-square"></div>
-                        <div class="random-square-info">this is some subtext under an illustration or image</div>
-                </div>        
-        </div>
-
-        <div class="grey-section">
-            <div class="grey-quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
-            <div class="grey-thor"><strong>-Thor, God of Thunder</strong></div>
-        </div>
-        <div class="footer">
-            <div class="footer-title"><strong>Call to action! It's time!</strong></div>
-            <div class="footer-subtext">Sign up for our product by clicking that button right over there!</div>
-            <button class="footer-button">Sign up</button>
-        </div>
-    </body>
+    </header>
 
 
 
+
+    
+</body>
 
 
 
