--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     It's a smaller font and the folor is lower contrast</p>
                 <button class="sign-up">Sign up</button>
             </div>
+            <div class="placeholder-image">
+                <div>this is a placeholder for an image</div>
+            </div>
         </div>
     </header>
 
