Add squares and text to random section
this commit adds all the elements along with the proper
spacing done by the gap property and margin

--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
         </div>
     </header>
 
+    <section class="section">
+         <div class="container">
+            <div class="section-title">Some random information.</div>
+            <div class="boxes-total">
+                <div class="boxes">
+                    <div class="empty-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="boxes">
+                    <div class="empty-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="boxes">
+                    <div class="empty-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="boxes">
+                    <div class="empty-box"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+
+         </div>
+    </section>
+
 
 
 
