--- a/index.html
+++ b/index.html
@@ -62,9 +62,20 @@
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
-
          </div>
     </section>
+
+    <section class="quote">
+        <div class="container">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just
+                filling up space, or maybe people will actually read it. Who knows? all I know
+                is that it looks nice.
+            </p>
+            <p class="thor">-Thor, God of Thunder</p>
+        </div>
+    </section>
+
+
 
 
 
