Add call to action section
this finalizes the project landing page.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
         </div>
     </section>
 
+    <div class="action">
+        <div class="container">
+            <div class="call-to-action">
+                <div class="text">
+                    <p class="title">Call to action! It's time!</p>
+                    <p>sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="action-button">Sign up</button>
+            </div>
+        </div>
+    </div>
+
 
 
 
